--- a/Projects/Frontend/bazaar-frontend/src/screens/Home/home.css
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Home/home.css
@@ -1,3 +1,11 @@
 .myRow{
     margin-bottom: 3rem;
 }
+
+.myPagination{
+    margin: auto;
+    align-items: center;
+    align-self: auto;
+    display: flex;
+    flex-direction: column;
+}
