--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -301,6 +301,18 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ZK-iU-Viu" userLabel="Close Button">
+                                                <rect key="frame" x="344" y="10" width="40" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="0MD-80-hJj"/>
+                                                    <constraint firstAttribute="height" constant="40" id="70z-m1-GOQ"/>
+                                                </constraints>
+                                                <color key="tintColor" red="1" green="0.64313725489999995" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" image="xmark.circle" catalog="system"/>
+                                                <connections>
+                                                    <action selector="continueAsGuestButtonPressed:" destination="Ghz-qv-MNd" eventType="touchUpInside" id="V8j-mF-XlH"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -309,7 +321,9 @@
                                             <constraint firstItem="ntr-J6-vgb" firstAttribute="leading" secondItem="SRL-WQ-xqY" secondAttribute="leading" constant="20" id="Uy0-Br-dpB"/>
                                             <constraint firstItem="VdA-nE-iRy" firstAttribute="top" secondItem="SRL-WQ-xqY" secondAttribute="top" constant="60" id="qm5-Bu-QUa"/>
                                             <constraint firstItem="VdA-nE-iRy" firstAttribute="centerX" secondItem="SRL-WQ-xqY" secondAttribute="centerX" id="rSK-tZ-H3l"/>
+                                            <constraint firstItem="7ZK-iU-Viu" firstAttribute="top" secondItem="SRL-WQ-xqY" secondAttribute="top" constant="10" id="rSq-sh-Tn3"/>
                                             <constraint firstAttribute="bottom" secondItem="ntr-J6-vgb" secondAttribute="bottom" constant="40" id="rf0-WU-8XK"/>
+                                            <constraint firstAttribute="trailing" secondItem="7ZK-iU-Viu" secondAttribute="trailing" constant="30" id="yQ9-R2-0Fr"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -703,14 +717,30 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWy-SB-Kf5" userLabel="Close Button">
+                                                <rect key="frame" x="344" y="10" width="40" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="PcT-xE-LSt"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Skr-c2-7rN"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="WA9-Ec-sHd"/>
+                                                    <constraint firstAttribute="height" constant="40" id="Zuh-ow-Gkx"/>
+                                                </constraints>
+                                                <color key="tintColor" red="1" green="0.64313725489999995" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" image="xmark.circle" catalog="system"/>
+                                                <connections>
+                                                    <action selector="loginHereButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="gUB-9r-2Wk"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="UWy-SB-Kf5" firstAttribute="top" secondItem="YTj-y8-J9b" secondAttribute="top" constant="10" id="3V9-CU-XTH"/>
                                             <constraint firstItem="pus-pD-cSQ" firstAttribute="top" secondItem="QLx-k6-V1v" secondAttribute="bottom" constant="40" id="5vp-NK-Sss"/>
                                             <constraint firstItem="QLx-k6-V1v" firstAttribute="centerX" secondItem="YTj-y8-J9b" secondAttribute="centerX" id="71j-cV-jBs"/>
                                             <constraint firstAttribute="trailing" secondItem="pus-pD-cSQ" secondAttribute="trailing" constant="20" id="DMX-Oq-etA"/>
                                             <constraint firstItem="pus-pD-cSQ" firstAttribute="leading" secondItem="YTj-y8-J9b" secondAttribute="leading" constant="20" id="EWf-g7-1Fi"/>
                                             <constraint firstItem="QLx-k6-V1v" firstAttribute="top" secondItem="YTj-y8-J9b" secondAttribute="top" constant="60" id="Hsi-KS-Hyv"/>
+                                            <constraint firstAttribute="trailing" secondItem="UWy-SB-Kf5" secondAttribute="trailing" constant="30" id="MQx-Pw-3JP"/>
                                             <constraint firstAttribute="bottom" secondItem="pus-pD-cSQ" secondAttribute="bottom" constant="40" id="zek-a3-qVM"/>
                                         </constraints>
                                     </view>
@@ -988,6 +1018,14 @@
                                     <constraint firstItem="Yf4-y2-3zC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="C18-TH-fVQ" secondAttribute="bottom" constant="5" id="ahK-8L-jZh"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8j-iX-P6E">
+                                <rect key="frame" x="237" y="619" width="109" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="temporaryLogoutButton:" destination="q6p-hj-l31" eventType="touchUpInside" id="zMd-nw-Onh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="M3M-oV-sm5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1018,7 +1056,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fee-SH-Ygg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2181" y="1655"/>
+            <point key="canvasLocation" x="2179.7101449275365" y="1654.6875"/>
         </scene>
         <!--Orders View Controller-->
         <scene sceneID="FcG-FD-LaT">
@@ -1132,6 +1170,7 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="profilepic" width="652" height="649"/>
         <image name="questionmark.square" catalog="system" width="128" height="114"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
