--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -480,17 +480,98 @@
             </objects>
             <point key="canvasLocation" x="1326" y="805"/>
         </scene>
-        <!--searchResultsViewController-->
+        <!--Search Results View Controller-->
         <scene sceneID="w6s-gm-NQO">
             <objects>
-                <viewController title="searchResultsViewController" id="bKq-Op-bwT" customClass="SearchResultsViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bKq-Op-bwT" customClass="SearchResultsViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R7F-N0-6cs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0v6-oV-MFa" userLabel="Loading View">
+                                <rect key="frame" x="10" y="88" width="394" height="725"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="jPC-pQ-5zQ">
+                                        <rect key="frame" x="187" y="352.66666666666669" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="jPC-pQ-5zQ" firstAttribute="centerX" secondItem="0v6-oV-MFa" secondAttribute="centerX" id="K8Y-2X-EAN"/>
+                                    <constraint firstItem="jPC-pQ-5zQ" firstAttribute="centerY" secondItem="0v6-oV-MFa" secondAttribute="centerY" id="rUu-3i-yjq"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Pw3-Sz-9fZ" userLabel="Stack-sortfilter">
+                                <rect key="frame" x="20" y="98" width="374" height="43.666666666666657"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOG-NJ-0Hw" userLabel="Filter">
+                                        <rect key="frame" x="0.0" y="0.0" width="167" height="43.666666666666664"/>
+                                        <color key="backgroundColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Filter"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-J4-Wpk" userLabel="Sort">
+                                        <rect key="frame" x="207" y="0.0" width="167" height="43.666666666666664"/>
+                                        <color key="backgroundColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Sort"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.94255672089041098" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.26605003240000002" green="0.26605003240000002" blue="0.26605003240000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yXi-T4-cbP">
+                                <rect key="frame" x="10" y="151.66666666666669" width="394" height="661.33333333333326"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="separatorColor" red="0.75340025909999997" green="0.75340025909999997" blue="0.75340025909999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="tnQ-LI-YMb" customClass="ProductCell" customModule="Bazaar_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="394" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tnQ-LI-YMb" id="FTN-Pq-AM0">
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0v6-oV-MFa" firstAttribute="leading" secondItem="gPK-On-Y2w" secondAttribute="leading" constant="10" id="5Wc-uX-zC6"/>
+                            <constraint firstItem="gPK-On-Y2w" firstAttribute="bottom" secondItem="0v6-oV-MFa" secondAttribute="bottom" id="6s5-Fv-sSA"/>
+                            <constraint firstItem="yXi-T4-cbP" firstAttribute="top" secondItem="Pw3-Sz-9fZ" secondAttribute="bottom" constant="10" id="78W-VW-Tz8"/>
+                            <constraint firstItem="Pw3-Sz-9fZ" firstAttribute="top" secondItem="gPK-On-Y2w" secondAttribute="top" constant="10" id="E4O-AP-K1J"/>
+                            <constraint firstItem="gPK-On-Y2w" firstAttribute="trailing" secondItem="yXi-T4-cbP" secondAttribute="trailing" constant="10" id="Ipm-eN-kav"/>
+                            <constraint firstItem="gPK-On-Y2w" firstAttribute="bottom" secondItem="yXi-T4-cbP" secondAttribute="bottom" id="LaF-8c-PLL"/>
+                            <constraint firstItem="Pw3-Sz-9fZ" firstAttribute="height" secondItem="gPK-On-Y2w" secondAttribute="height" multiplier="0.06" id="YfM-RC-LZL"/>
+                            <constraint firstItem="gPK-On-Y2w" firstAttribute="trailing" secondItem="Pw3-Sz-9fZ" secondAttribute="trailing" constant="20" id="ang-CQ-oYU"/>
+                            <constraint firstItem="Pw3-Sz-9fZ" firstAttribute="leading" secondItem="gPK-On-Y2w" secondAttribute="leading" constant="20" id="eiQ-Hp-NaO"/>
+                            <constraint firstItem="0v6-oV-MFa" firstAttribute="top" secondItem="gPK-On-Y2w" secondAttribute="top" id="pKt-16-zLK"/>
+                            <constraint firstItem="yXi-T4-cbP" firstAttribute="leading" secondItem="gPK-On-Y2w" secondAttribute="leading" constant="10" id="x2d-WV-5dI"/>
+                            <constraint firstItem="gPK-On-Y2w" firstAttribute="trailing" secondItem="0v6-oV-MFa" secondAttribute="trailing" constant="10" id="zgg-Ib-9vF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="gPK-On-Y2w"/>
                     </view>
                     <navigationItem key="navigationItem" id="KS6-Ue-MY0"/>
+                    <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="jPC-pQ-5zQ" id="hy7-mX-9QJ"/>
+                        <outlet property="filterButton" destination="XOG-NJ-0Hw" id="LmM-qq-Zfk"/>
+                        <outlet property="loadingView" destination="0v6-oV-MFa" id="xkk-it-r6b"/>
+                        <outlet property="searchResultsTableView" destination="yXi-T4-cbP" id="la4-lf-HF9"/>
+                        <outlet property="sortButton" destination="CJW-J4-Wpk" id="lJf-dS-oUC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vqE-UQ-OUm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1261,4 +1342,5 @@
         <image name="questionmark.square" catalog="system" width="64" height="56"/>
         <image name="xmark.circle" catalog="system" width="64" height="60"/>
     </resources>
+    <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
